# slam3d

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  License.txt  README.md  manifest.xml  package.xml  slam3d-config.cmake  slam3d-dependencies.cmake  slam3d.pc.in  slam3d.project
.github/workflows/: cmake.yml
ci/: Dockerfile  README.md
cmake/: FindG2O.cmake  FindSLAM3D.cmake
include/: Clock.hpp  FileLogger.hpp  G2oSolver.hpp  GraphMapper.hpp  LineScanSensor.hpp  Logger.hpp  Measurement.hpp  Odometry.hpp  PointCloudSensor.hpp  PoseGraph.hpp  Sensor.hpp  Solver.hpp  Types.hpp
include/slam3d/: LaserOdometry.hpp  Mapper.hpp  PoseGraph.hpp  Types.hpp
slam3d/: CMakeLists.txt
slam3d/core/: CMakeLists.txt  Clock.hpp  DataStorage.cpp  DataStorage.hpp  FileLogger.hpp  Graph.cpp  Graph.hpp  GraphTest.hpp  Logger.hpp  Mapper.cpp  Mapper.hpp  MeasurementRegistry.cpp  MeasurementRegistry.hpp  MeasurementSerialization.cpp  MeasurementSerialization.hpp  MeasurementStorage.cpp  MeasurementStorage.hpp  Measurements.cpp  Measurements.hpp  PoseSensor.hpp  PostgreStorage.cpp  PostgreStorage.hpp  ScanSensor.cpp  ScanSensor.hpp  Sensor.cpp  Sensor.hpp  Solver.hpp  SolverTest.hpp  Types.cpp  Types.hpp  slam3d_core.pc.in
slam3d/core/test_templates/: GraphTest.hpp  MeasurementTests.hpp
slam3d/graph/: CMakeLists.txt
slam3d/graph/boost/: BoostGraph.cpp  BoostGraph.hpp  BoostGraphTest.cpp  CMakeLists.txt  slam3d_graph_boost.pc.in
slam3d/graph/neo4j/: CMakeLists.txt  Neo4jConnection.cpp  Neo4jConnection.hpp  Neo4jConversion.cpp  Neo4jConversion.hpp  Neo4jGraph.cpp  Neo4jGraph.hpp  Neo4jGraphTest.cpp  Neo4jParamaterSet.hpp  Neo4jQuery.cpp  Neo4jQuery.hpp  Neo4jValue.hpp  README.md  RedisMap.cpp  RedisMap.hpp  docker-compose.yml  slam3d_graph_neo4j.pc.in
slam3d/measurements/: CMakeLists.txt
slam3d/measurements/redis/: CMakeLists.txt  RedisMeasurementStorage.cpp  RedisMeasurementStorage.hpp  RedisMeasurements.cpp  RedisMeasurements.hpp  slam3d_measurements_redis.pc.in
slam3d/sensor/: CMakeLists.txt
slam3d/sensor/gdal/: CMakeLists.txt  CoordTransformer.cpp  CoordTransformer.hpp  GpsPoseSensor.cpp  GpsPoseSensor.hpp  GpsSensor.cpp  GpsSensor.hpp  slam3d_sensor_gdal.pc.in
slam3d/sensor/pcl/: CMakeLists.txt  ConstrainedGICP.cpp  ConstrainedGICP.hpp  PointCloudSensor.cpp  PointCloudSensor.hpp  PointCloudSensorTest.cpp  RegistrationParameters.hpp  pcl_serialization.hpp  slam3d_sensor_pcl.pc.in
slam3d/sensor/pointmatcher/: CMakeLists.txt  Scan2DSensor.cpp  Scan2DSensor.hpp  ScanSensor.cpp  ScanSensor.hpp  slam3d_sensor_pointmatcher.pc.in
slam3d/sensor/rtls_flares/: CMakeLists.txt  FlareSensor.cpp  FlareSensor.hpp  Status.cpp  Status.hpp  slam3d_sensor_rtls_flares.pc.in
slam3d/sensor/scan/: CMakeLists.txt  ScanSensor.cpp  slam3d_sensor_scan.pc.in
slam3d/serialization/: CMakeLists.txt  GraphSerialization.cpp  GraphSerialization.hpp  MeasurementSerialization.cpp  MeasurementSerialization.hpp  Yaml.hpp  YamlTypes.hpp  slam3d_serialization.pc.in
slam3d/solver/: CMakeLists.txt
slam3d/solver/g2o/: CMakeLists.txt  G2oSolver.cpp  G2oSolver.hpp  G2oSolverTest.cpp  edge_direction_prior.cpp  edge_distance.cpp  edge_distance.h  edge_orientation_prior.cpp  edge_orientation_prior.h  edge_pose_prior.cpp  edge_pose_prior.h  edge_position_prior.cpp  edge_position_prior.h  slam3d_solver_g2o.pc.in
src/: BoostGraph.cpp  BoostGraph.hpp  BoostMapper.cpp  BoostMapper.hpp  CMakeLists.txt  Clock.hpp  Dummy.cpp  Dummy.hpp  FileLogger.hpp  G2oSolver.cpp  G2oSolver.hpp  GICPConfiguration.hpp  Graph.cpp  Graph.hpp  GraphAnalysisMapper.cpp  GraphAnalysisMapper.hpp  GraphMapper.cpp  GraphMapper.hpp  LaserOdometry.cpp  LineScanSensor.cpp  LineScanSensor.hpp  Logger.hpp  Main.cpp  Mapper.cpp  Mapper.hpp  Odometry.hpp  PointCloudSensor.cpp  PointCloudSensor.hpp  PoseGraph.cpp  PoseSensor.hpp  Sensor.cpp  Sensor.hpp  Solver.cpp  Solver.hpp  Types.hpp  slam3d.pc.in
src/g2o/: edge_direction_prior.cpp  edge_direction_prior.h
src/slam3d/: PointCloudSensor.hpp  Solver.hpp
test/: CMakeLists.txt  dummy.cpp  g2o_solver.cpp  pcl_sensor.cpp  pose_graph.cpp  solver.cpp  test.ply  test_Dummy.cpp
