<?xml version="1.0"?>
<package>

	<name>slam3d</name>
	<version>0.1.0</version>
	<description>Generic framework for graph based SLAM in 3-dimensional space.</description>
	<maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>

	<license>GPLv3</license>
	<url type="website">http://wiki.ros.org/slam3d</url>
	<author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author> -->

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>libg2o</build_depend>
	<build_depend>eigen</build_depend>
	<build_depend>boost</build_depend>
	<build_depend>suitesparse</build_depend>

	<run_depend>libg2o</run_depend>
	<run_depend>eigen</run_depend>
	<run_depend>boost</run_depend>
	<run_depend>suitesparse</run_depend>

</package>
