<?xml version="1.0"?>
<package>

	<name>slam3d</name>
	<version>2.2.1</version>
	<description>Generic framework for graph based SLAM in 3-dimensional space.</description>
	<author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author>
	<maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>

	<license>New BSD</license>
	<url type="website">http://wiki.ros.org/slam3d</url>

	<buildtool_depend>cmake</buildtool_depend>

	<build_depend>libpcl-all-dev</build_depend>
	<build_depend>libg2o</build_depend>
	<build_depend>suitesparse</build_depend>
	<build_depend>eigen</build_depend>
	<build_depend>boost</build_depend>
	<build_depend>libpointmatcher</build_depend>

	<run_depend>libpcl-all</run_depend>
	<run_depend>catkin</run_depend>
	<run_depend>libg2o</run_depend>
	<run_depend>suitesparse</run_depend>
	<run_depend>eigen</run_depend>
	<run_depend>boost</run_depend>
	<run_depend>libpointmatcher</run_depend>

	<export>
		<build_type>cmake</build_type>
	</export>

</package>
