<?xml version="1.0"?>
<package format="3">

	<name>slam3d</name>
	<version>2.5.0</version>
	<description>Generic framework for graph based SLAM in 3-dimensional space.</description>
	<author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author>
	<maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>

	<license>New BSD</license>
	<url type="website">http://wiki.ros.org/slam3d</url>

	<buildtool_depend>cmake</buildtool_depend>

	<depend>libpcl-all-dev</depend>
	<depend>g2o</depend>
	<depend>suitesparse</depend>
	<depend>eigen</depend>
	<depend>boost</depend>
	<depend>libpointmatcher</depend>

	<export>
		<build_type>cmake</build_type>
	</export>

</package>
